# dylint-rules

./: Cargo.toml
rules/arithmetic_op/: Cargo.toml
rules/arithmetic_op/src/: lib.rs
