[package]
name = "arithmetic_op"
version = "0.1.0"
authors = ["Kevin Wang <wy721@qq.com>"]
description = "Lint against directly using arithmetic operators in code"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "e43f5a17d4d9263616ae6fc28a7c5353e80d8a12" }
dylint_linting = "2.0.13"
if_chain = "1.0.2"

[dev-dependencies]
dylint_testing = "2.0.13"

[package.metadata.rust-analyzer]
rustc_private = true
